# agda-mode

./: .gitignore  Cargo.toml  README.md
.github/: README.md
.github/workflows/: rust.yml
agda-tac/: Cargo.toml  README.md
agda-tac/src/: args.rs  editor.rs  file_io.rs  input.rs  interact.rs  main.rs  repl.rs
agda-tac/src/repl/: goal.rs  goal_list.rs  line.rs  mod.rs
src/: agda.rs  base.rs  cmd.rs  debug.rs  hs.rs  lib.rs  pos.rs  resp.rs  tests.rs
src/agda/: mod.rs  read.rs  repl.rs  verify.rs
src/cli/: args.rs  mod.rs
src/cmd/: goal.rs  iotcm.rs  mod.rs
src/resp/: di.rs  give.rs  goal.rs  hl.rs  mod.rs  oc.rs
