[package]
name = "agda-mode"
version = "0.1.7"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
description = "Accessing Agda's interaction mode via command line, in Rust"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/ice1000/agda-mode"
readme = ".github/README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
either = "1.5"

[dependencies.tokio]
version = "0.2.0"
features = ["io-util", "rt-core", "process"]

[workspace]
members = ["agda-tac"]
