[package]
name = "agda-tac"
version = "0.1.2"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
description = "Agda - Tactical And Comprehensible"
edition = "2018"
license = "MIT"
repository = "https://github.com/ice1000/agda-mode"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0"
clap = "2.33"
structopt = "0.3"
dirs = "2.0"
minitt-util = { version = "0.1", features = ["cli"] }
rustyline = "5.0"
agda-mode = { path = ".." }

[dependencies.tokio]
version = "0.2.0-alpha.6"
default-features = false
# Because these are also used in agda-mode
features = ["io", "rt-full", "codec", "process"]
