[package]
name = "agda-tac"
version = "0.1.6"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
description = "Agda - Tactical And Comprehensible"
edition = "2018"
license = "MIT"
repository = "https://github.com/ice1000/agda-mode"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0"
clap = "2.33"
structopt = "0.3"
dirs = "3.0"
rustyline = "6.3"
ropey = "1.1"
either = "1.5"
agda-mode = { path = ".." }

[dependencies.minitt-util]
version = "0.2.4"
features = ["cli"]

[dependencies.tokio]
version = "0.3.4"
features = ["io-util", "rt-multi-thread", "process", "macros"]
